--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,7 @@
 PORT=3000
 MONGODB_URI=mongodb://localhost:27017/soe_board
 JWT_SECRET=your-secret-key
+NODE_ENV=production
+# PORT=10000
+# JWT_SECRET=your-secret-key-here
+# DATABASE_URL=your-database-connection-string
