--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
-MONGODB_URI=mongodb+srv://Emmanuel:wRJsETWmv1HAIHwU@cit306.kgksxt9.mongodb.net/?retryWrites=true&w=majority&appName=CIT306
+MONGODB_URI=mongodb+srv://admin:admin123@cit306.kgksxt9.mongodb.net/CIT306?retryWrites=true&w=majority&appName=CIT306
 JWT_SECRET=your-secret-key
 NODE_ENV=production
 # PORT=10000
